(executables
 (names rpc_doc
        p2p_doc)
 (libraries mineplex-base
            mineplex-stdlib-unix
            mineplex-shell
            mineplex-protocol-updater
            mineplex-embedded-protocol-alpha
            re)
 (flags (:standard -open mineplex_base__TzPervasives
                   -open mineplex_stdlib_unix
                   -open mineplex_shell
                   -open mineplex_protocol_updater
                   -linkall)))

(alias
 (name buildtest)
 (deps rpc_doc.exe
       p2p_doc.exe))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
