; See src/bin_node/dune to understand in detail how this file abuses
; the alternative dependency mechanism of dune to implement optional
; dependencies.

(executables
 (names main_client main_admin)
 (public_names mineplex-client mineplex-admin-client)
 (package mineplex-client)
 (libraries mineplex-base
            mineplex-base.unix
            mineplex-rpc-http-client
            mineplex-shell-services
            mineplex-client-base
            mineplex-client-commands
            mineplex-mockup-commands

            (select void_for_linking-genesis from
              (mineplex-client-genesis -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-genesis-carthagenet from
              (mineplex-client-genesis-carthagenet -> void_for_linking)
              (-> void_for_linking))

            (select void_for_linking-000-Ps9mPmXa from
              (mineplex-client-000-Ps9mPmXa -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-001-Pt8PXNHh from
              (mineplex-client-001-Pt8PXNHh-commands.registration -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-002-Pt4xzupC from
              (mineplex-client-002-Pt4xzupC-commands.registration -> void_for_linking)
              (-> void_for_linking))

            (select void_for_linking-alpha from
              (mineplex-client-alpha-commands.registration -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-demo-counter from
              (mineplex-client-demo-counter -> void_for_linking)
              (-> void_for_linking))

            (select void_for_linking-baking-alpha from
              (mineplex-baking-alpha-commands.registration -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-baking-001-Pt8PXNHh from
              (mineplex-baking-001-Pt8PXNHh-commands.registration -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-baking-002-Pt4xzupC from
              (mineplex-baking-002-Pt4xzupC-commands.registration -> void_for_linking)
              (-> void_for_linking))

            mineplex-stdlib-unix
            mineplex-client-base-unix
            mineplex-signer-backends.unix)
  (flags (:standard -open mineplex_base__TzPervasives
                    -open mineplex_rpc_http_client
                    -open mineplex_stdlib_unix
                    -open mineplex_shell_services
                    -open mineplex_client_base
                    -open mineplex_client_commands
                    -open mineplex_mockup_commands
                    -open mineplex_client_base_unix
                    -linkall)))

(rule
  (target void_for_linking)
  (action (write-file ${target} "")))

(install
 (package mineplex-client)
 (section bin)
 (files (mineplex-init-sandboxed-client.sh as mineplex-init-sandboxed-client.sh)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
