opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "tezos-tooling" { with-test }
  "dune" { >= "1.11" }
  "tezos-base"
  "tezos-client-base"

  "tezos-client-genesis"
  "tezos-client-genesis-carthagenet"

  "tezos-client-alpha"
  "tezos-client-000-Ps9mPmXa"
  "tezos-client-001-Pt8PXNHh"
  "tezos-client-002-Pt4xzupC"

  "tezos-client-demo-counter"

  "tezos-client-alpha-commands"
  "tezos-client-001-Pt8PXNHh-commands"
  "tezos-client-002-Pt4xzupC-commands"

  "tezos-baking-alpha-commands"
  "tezos-baking-001-Pt8PXNHh-commands"
  "tezos-baking-002-Pt4xzupC-commands"

  "tezos-client-base-unix"
  "tezos-mockup-commands"
  "tezos-signer-backends"
  "tezos-node" { with-test }
  "tezos-protocol-compiler" { with-test }
  "tezos-protocol-alpha-parameters" { with-test }
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Tezos: `tezos-client` binary"
