opam-version: "2.0"
maintainer: "contact@mineplex.com"
authors: [ "mineplex devteam" ]
homepage: "https://www.mineplex.com/"
bug-reports: "https://gitlab.com/mineplex/mineplex/issues"
dev-repo: "git+https://gitlab.com/mineplex/mineplex.git"
license: "MIT"
depends: [
  "mineplex-tooling" { with-test }
  "dune" { >= "1.11" }
  "mineplex-base"
  "mineplex-client-base"

  "mineplex-client-genesis"
  "mineplex-client-genesis-carthagenet"

  "mineplex-client-alpha"
  "mineplex-client-000-Ps9mPmXa"
  "mineplex-client-001-Pt8PXNHh"
  "mineplex-client-002-Pt4xzupC"

  "mineplex-client-demo-counter"

  "mineplex-client-alpha-commands"
  "mineplex-client-001-Pt8PXNHh-commands"
  "mineplex-client-002-Pt4xzupC-commands"

  "mineplex-baking-alpha-commands"
  "mineplex-baking-001-Pt8PXNHh-commands"
  "mineplex-baking-002-Pt4xzupC-commands"

  "mineplex-client-base-unix"
  "mineplex-mockup-commands"
  "mineplex-signer-backends"
  "mineplex-node" { with-test }
  "mineplex-protocol-compiler" { with-test }
  "mineplex-protocol-alpha-parameters" { with-test }
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "mineplex: `mineplex-client` binary"
