(executables
 (names codec)
 (public_names mineplex-codec)
 (package mineplex-codec)
 (libraries data-encoding
            mineplex-base
            mineplex-stdlib-unix
            mineplex-event-logging
            mineplex-client-base
            mineplex-client-base-unix
            mineplex-clic
            mineplex-signer-services
            mineplex-client-alpha
 )
 (flags (:standard -open Data_encoding
                   -open mineplex_base__TzPervasives
                   -open mineplex_client_base_unix
                   -open mineplex_client_base
                   -open mineplex_clic
                   -open mineplex_stdlib_unix
                   -open mineplex_event_logging
                   -linkall)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
