opam-version: "2.0"
maintainer: "contact@mineplex.com"
authors: [ "mineplex devteam" ]
homepage: "https://www.mineplex.com/"
bug-reports: "https://gitlab.com/mineplex/mineplex/issues"
dev-repo: "git+https://gitlab.com/mineplex/mineplex.git"
license: "MIT"
depends: [
  "mineplex-tooling" { with-test }
  "dune" { >= "1.11" }
  "data-encoding" { = "0.2" }
  "mineplex-base"
  "mineplex-stdlib-unix"
  "mineplex-event-logging"
  "mineplex-client-base"
  "mineplex-client-base-unix"
  "mineplex-clic"
  "mineplex-signer-services"
  "mineplex-client-alpha"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "mineplex: `mineplex-codec` binary to encode and decode values"
