; This file abuses the alternative dependency mechanism of dune to
; implement optional dependencies.
; The semantic of `(select a from (b -> c) (-> d))` is: if libraries
; `b` are present, `cp c a` and link `b` else `cp d a`. Here, we don't
; care about the cp part as we are not using the file obtained at
; all. So, we give them names only meant to not clash with anything
; and copy always the same (generated itself) empty file
; "void_for_linking".

(executable
 (name main)
 (public_name mineplex-node)
 (package mineplex-node)
 (libraries mineplex-base
            mineplex-version
            mineplex-stdlib-unix
            mineplex-shell-services
            mineplex-workers
            mineplex-rpc-http-server
            mineplex-p2p
            mineplex-shell
            mineplex-storage
            mineplex-validator
            mineplex-shell-context
            mineplex-protocol-updater
            (select void_for_linking-genesis from
              (mineplex-embedded-protocol-genesis -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-genesis-carthagenet from
              (mineplex-embedded-protocol-genesis-carthagenet -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-demo-noops from
              (mineplex-embedded-protocol-demo-noops -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-demo-counter from
              (mineplex-embedded-protocol-demo-counter -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-alpha from
              (mineplex-embedded-protocol-alpha -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-000-Ps9mPmXa from
              (mineplex-embedded-protocol-000-Ps9mPmXa -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-001-Pt8PXNHh from
              (mineplex-embedded-protocol-001-Pt8PXNHh -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-001-Pt8PXNHh-mempool from
              (mineplex-mempool-001-Pt8PXNHh -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-002-Pt4xzupC from
              (mineplex-embedded-protocol-002-Pt4xzupC -> void_for_linking)
              (-> void_for_linking))
            (select void_for_linking-002-Pt4xzupC-mempool from
              (mineplex-mempool-002-Pt4xzupC -> void_for_linking)
              (-> void_for_linking))
            cmdliner
            tls)
 (flags (:standard -open mineplex_base__TzPervasives
                   -open mineplex_base
                   -open mineplex_stdlib_unix
                   -open mineplex_shell_services
                   -open mineplex_rpc_http
                   -open mineplex_rpc_http_server
                   -open mineplex_p2p
                   -open mineplex_shell
                   -open mineplex_storage
                   -open mineplex_validator
                   -open mineplex_shell_context
                   -open mineplex_workers
                   -open mineplex_protocol_updater
                   -linkall)))

(rule
  (target void_for_linking)
  (action (write-file ${target} "")))

(install
 (package mineplex-node)
 (section bin)
 (files (mineplex-sandboxed-node.sh as mineplex-sandboxed-node.sh)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
