opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "tezos-tooling" { with-test }
  "dune" { >= "1.11" }
  "tezos-base"
  "tezos-version"
  "tezos-rpc-http-server"
  "tezos-p2p"
  "tezos-shell"
  "tezos-workers"
  "tezos-protocol-updater"
  "tezos-validator"
  "tezos-embedded-protocol-genesis"
  "tezos-embedded-protocol-genesis-carthagenet"
  "tezos-embedded-protocol-demo-noops"
  "tezos-embedded-protocol-demo-counter"
  "tezos-embedded-protocol-alpha"
  "tezos-embedded-protocol-demo-noops"
  "tezos-embedded-protocol-000-Ps9mPmXa"
  "tezos-embedded-protocol-001-Pt8PXNHh"
  "tezos-mempool-001-Pt8PXNHh"
  "tezos-embedded-protocol-002-Pt4xzupC"
  "tezos-mempool-002-Pt4xzupC"
  "cmdliner"
  "tls"
  "cstruct"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Tezos: `tezos-node` binary"
