opam-version: "2.0"
maintainer: "contact@mineplex.com"
authors: [ "mineplex devteam" ]
homepage: "https://www.mineplex.com/"
bug-reports: "https://gitlab.com/mineplex/mineplex/issues"
dev-repo: "git+https://gitlab.com/mineplex/mineplex.git"
license: "MIT"
depends: [
  "mineplex-tooling" { with-test }
  "dune" { >= "1.11" }
  "mineplex-base"
  "mineplex-version"
  "mineplex-rpc-http-server"
  "mineplex-p2p"
  "mineplex-shell"
  "mineplex-workers"
  "mineplex-protocol-updater"
  "mineplex-validator"
  "mineplex-embedded-protocol-genesis"
  "mineplex-embedded-protocol-genesis-carthagenet"
  "mineplex-embedded-protocol-demo-noops"
  "mineplex-embedded-protocol-demo-counter"
  "mineplex-embedded-protocol-alpha"
  "mineplex-embedded-protocol-demo-noops"
  "mineplex-embedded-protocol-000-Ps9mPmXa"
  "mineplex-embedded-protocol-001-Pt8PXNHh"
  "mineplex-mempool-001-Pt8PXNHh"
  "mineplex-embedded-protocol-002-Pt4xzupC"
  "mineplex-mempool-002-Pt4xzupC"
  "cmdliner"
  "tls"
  "cstruct"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "mineplex: `mineplex-node` binary"
