(executables
  (names main)
  (libraries flextesa)
  (flags :standard))

(alias
  (name runtest_sandbox_accusations_simple_double_baking)
  (locks /tcp-port/10000_range)
  (action
    (run %{exe:main.exe} accusations simple-double-baking
         --root-path %{env:ROOT_PATH=/tmp/flextesa-acc-sdb/}
         --with-timestamp
         --base-port 10_000
         --mineplex-client-binary %{bin:mineplex-client}
         --mineplex-node-binary %{bin:mineplex-node} )))

(alias
  (name runtest_sandbox_accusations_simple_double_endorsing)
  (locks /tcp-port/20000_range)
  (action
    (run %{exe:main.exe} accusations simple-double-endorsing
         --root-path %{env:ROOT_PATH=/tmp/flextesa-acc-sde/}
         --with-timestamp
         --base-port 20_000
         --mineplex-client-binary %{bin:mineplex-client}
         --mineplex-node-binary %{bin:mineplex-node} )))

(alias
  (name runtest_sandbox_voting_demo_noops)
  (deps (package mineplex-protocol-demo-noops))
  (locks /tcp-port/30000_range)
  (action
    (run %{exe:main.exe} voting
         %{lib:mineplex-protocol-demo-noops:raw/mineplex_PROTOCOL}
         %{lib:mineplex-protocol-demo-noops:raw/mineplex_PROTOCOL}
         --root-path %{env:ROOT_PATH=/tmp/flextesa-voting-demo-noops/}
         --base-port 30_000
         --size 3
         --with-timestamp
         --winning-client-is-clueless
         --winner-client-binary %{bin:mineplex-client}
         --current-client-binary %{bin:mineplex-client}
         --current-admin-client-binary %{bin:mineplex-admin-client}
         --current-node-binary %{bin:mineplex-node}
         )))

(alias
  (name runtest_sandbox_user_activated_upgrade)
  (locks /tcp-port/40000_range)
  (action
    (run %{exe:main.exe} mini-net
         --root-path %{env:ROOT_PATH=/tmp/flextesa-hard-fork/}
         --base-port 40_000
         --size 2
         --number-of-b 2
         --with-timestamp
         --until 20
         --protocol-hash PsCARTHAGazKbHtnKfLzQg3kms52kSRpgnDY982a9oYsSXRLQEb
         --protocol-kind Carthage
         --mineplex-client %{bin:mineplex-client}
         --mineplex-node %{bin:mineplex-node}
         --mineplex-baker %{bin:mineplex-baker-006-PsCARTHA}
         --mineplex-endorser %{bin:mineplex-endorser-006-PsCARTHA}
         --mineplex-accuser %{bin:mineplex-accuser-006-PsCARTHA}
         --hard-fork 10:ProtoALphaALphaALphaALphaALphaALphaALphaALphaDdp3zK
         --hard-fork-baker %{bin:mineplex-baker-alpha}
         --hard-fork-endorser %{bin:mineplex-endorser-alpha}
         --hard-fork-accuser %{bin:mineplex-accuser-alpha}
         )))


(alias
  (name runtest_sandbox_daemons_upgrade)
  (locks /tcp-port/50000_range)
  (action
    (run %{exe:main.exe} daemons-upgrade
         %{lib:mineplex-protocol-alpha:raw/mineplex_PROTOCOL}
         --root-path %{env:ROOT_PATH=/tmp/flextesa-daemons-upgrade/}
         --base-port 50_000
         --extra-dummy-proposals-batch-size 2
         --extra-dummy-proposals-batch-levels 3,5
         --size 2
         --number-of-b 2
         --time-betw 3
         --blocks-per-vot 14
         --with-timestamp
         --protocol-hash PsCARTHAGazKbHtnKfLzQg3kms52kSRpgnDY982a9oYsSXRLQEb
         --protocol-kind Carthage
         --mineplex-client %{bin:mineplex-client}
         --mineplex-admin %{bin:mineplex-admin-client}
         --mineplex-node %{bin:mineplex-node}
         --first-baker %{bin:mineplex-baker-006-PsCARTHA}
         --first-endorser %{bin:mineplex-endorser-006-PsCARTHA}
         --first-accuser %{bin:mineplex-accuser-006-PsCARTHA}
         --second-baker %{bin:mineplex-baker-alpha}
         --second-endorser %{bin:mineplex-endorser-alpha}
         --second-accuser %{bin:mineplex-accuser-alpha}
         )))

(alias
  (name runtest_sandbox_node_synchronization)
  (locks /tcp-port/15000_range)
  (action
    (run %{exe:main.exe} node-synchronization
         --mineplex-client-binary %{bin:mineplex-client}
         --mineplex-node-binary %{bin:mineplex-node}
         --primary-history-mode archive
         --secondary-history-mode full
         --should-synch true
 )))

(alias
  (name runtest_sandbox_node_synchronization)
  (locks /tcp-port/15000_range)
  (action
    (run %{exe:main.exe} node-synchronization
         --mineplex-client-binary %{bin:mineplex-client}
         --mineplex-node-binary %{bin:mineplex-node}
         --primary-history-mode archive
         --secondary-history-mode rolling
         --should-synch true
 )))

(alias
  (name runtest_sandbox_node_synchronization)
  (locks /tcp-port/15000_range)
  (action
    (run %{exe:main.exe} node-synchronization
         --mineplex-client-binary %{bin:mineplex-client}
         --mineplex-node-binary %{bin:mineplex-node}
         --primary-history-mode full
         --secondary-history-mode archive
         --should-synch true
 )))

(alias
  (name runtest_sandbox_node_synchronization)
  (locks /tcp-port/15000_range)
  (action
    (run %{exe:main.exe} node-synchronization
         --mineplex-client-binary %{bin:mineplex-client}
         --mineplex-node-binary %{bin:mineplex-node}
         --primary-history-mode full
         --secondary-history-mode rolling
         --should-synch true
 )))

(alias
  (name runtest_sandbox_node_synchronization)
  (locks /tcp-port/15000_range)
  (action
    (run %{exe:main.exe} node-synchronization
         --mineplex-client-binary %{bin:mineplex-client}
         --mineplex-node-binary %{bin:mineplex-node}
         --primary-history-mode rolling
         --secondary-history-mode archive
         --should-synch false
 )))

(alias
  (name runtest_sandbox_node_synchronization)
  (locks /tcp-port/15000_range)
  (action
    (run %{exe:main.exe} node-synchronization
         --mineplex-client-binary %{bin:mineplex-client}
         --mineplex-node-binary %{bin:mineplex-node}
         --primary-history-mode rolling
         --secondary-history-mode full
         --should-synch false
 )))

(alias
 (name runtest_flextesa)
 (deps
  (alias runtest_sandbox_accusations_simple_double_baking)
  (alias runtest_sandbox_accusations_simple_double_endorsing)
  (alias runtest_sandbox_voting_demo_noops)
  (alias runtest_sandbox_user_activated_upgrade)
  (alias runtest_sandbox_daemons_upgrade)
  (alias runtest_sandbox_node_synchronization)))
