(executables
 (names main_signer)
 (public_names mineplex-signer)
 (package mineplex-signer)
 (libraries mineplex-base
            mineplex-base.unix
            mineplex-client-base
            mineplex-client-base-unix
            mineplex-client-commands
            mineplex-signer-services
            mineplex-rpc-http-server
            mineplex-rpc-http-client-unix
            mineplex-stdlib-unix
            mineplex-signer-backends.unix)
 (flags (:standard -open mineplex_base__TzPervasives
                   -open mineplex_client_base
                   -open mineplex_client_base_unix
                   -open mineplex_client_commands
                   -open mineplex_signer_services
                   -open mineplex_rpc_http
                   -open mineplex_rpc_http_server
                   -open mineplex_rpc_http_client_unix
                   -open mineplex_stdlib_unix
                   -open mineplex_stdlib)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
