opam-version: "2.0"
maintainer: "contact@mineplex.com"
authors: [ "mineplex devteam" ]
homepage: "https://www.mineplex.com/"
bug-reports: "https://gitlab.com/mineplex/mineplex/issues"
dev-repo: "git+https://gitlab.com/mineplex/mineplex.git"
license: "MIT"
depends: [
  "mineplex-tooling" { with-test }
  "dune" { >= "1.11" }
  "mineplex-base"
  "mineplex-client-base"
  "mineplex-client-base-unix"
  "mineplex-client-commands"
  "mineplex-signer-services"
  "mineplex-rpc-http-server"
  "mineplex-stdlib-unix"
  "mineplex-signer-backends"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "mineplex: `mineplex-signer` binary"
