(library
 (name mineplex_validator)
 (public_name mineplex-validator)
 (libraries mineplex-base
            mineplex-storage
            mineplex-stdlib-unix
            mineplex-protocol-environment
            mineplex-protocol-updater
            mineplex-shell
            mineplex-shell-context
            mineplex-validation)
 (flags (:standard -open mineplex_base__TzPervasives
                   -open mineplex_storage
                   -open mineplex_stdlib_unix
                   -open mineplex_shell
                   -open mineplex_shell_services
                   -open mineplex_validation
                   -open mineplex_protocol_updater
                   -open mineplex_shell_context))
 (modules Validator))

(executable
 (name main_validator)
 (public_name mineplex-validator)
 (package mineplex-validator)
 (libraries mineplex_validator)
 (flags (:standard -open mineplex_base__TzPervasives
                   -open mineplex_storage
                   -open mineplex_stdlib_unix
                   -open mineplex_shell
                   -open mineplex_shell_services
                   -open mineplex_validation
                   -open mineplex_protocol_updater
                   -open mineplex_validator
                   -linkall))
 (modules Main_validator))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
