opam-version: "2.0"
maintainer: "contact@mineplex.com"
authors: [ "mineplex devteam" ]
homepage: "https://www.mineplex.com/"
bug-reports: "https://gitlab.com/mineplex/mineplex/issues"
dev-repo: "git+https://gitlab.com/mineplex/mineplex.git"
license: "MIT"
depends: [
  "dune" { >= "1.11" }
  "mineplex-base"
  "mineplex-storage"
  "mineplex-stdlib-unix"
  "mineplex-protocol-environment"
  "mineplex-protocol-updater"
  "mineplex-shell"
  "mineplex-shell-context"
  "mineplex-validation"
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
synopsis: "mineplex: `mineplex-validator` binary for external validation of blocks"
