(library
 (name mineplex_base)
 (public_name mineplex-base)
 (flags (:standard -open mineplex_stdlib
                   -open mineplex_crypto
                   -open Data_encoding
                   -open mineplex_error_monad
                   -open mineplex_rpc
                   -open mineplex_clic
                   -open mineplex_micheline
                   -open mineplex_event_logging
                   ))
 (libraries mineplex-stdlib
            mineplex-crypto
            data-encoding
            mineplex-error-monad
            mineplex-event-logging
            mineplex-rpc
            mineplex-clic
            mineplex-micheline
            ptime
            ezjsonm
            lwt
            ipaddr))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
