opam-version: "2.0"
maintainer: "contact@mineplex.com"
authors: [ "mineplex devteam" ]
homepage: "https://www.mineplex.com/"
bug-reports: "https://gitlab.com/mineplex/mineplex/issues"
dev-repo: "git+https://gitlab.com/mineplex/mineplex.git"
license: "MIT"
depends: [
  "mineplex-tooling" { with-test }
  "dune" { >= "1.11" }
  "mineplex-stdlib"
  "mineplex-crypto"
  "data-encoding" { = "0.2" }
  "mineplex-error-monad"
  "mineplex-event-logging"
  "mineplex-micheline"
  "mineplex-rpc"
  "ptime" { >= "0.8.4" }
  "ezjsonm" { >= "0.5.0" }
  "ipaddr" {>= "5.0.0" & < "6.0.0"}
  "re" { >= "1.7.2" }
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "mineplex: meta-package and pervasive type definitions for mineplex"
