(library
 (name mineplex_clic)
 (public_name mineplex-clic)
 (flags (:standard -open mineplex_stdlib
                   -open mineplex_error_monad))
 (libraries mineplex-stdlib
            lwt
            mineplex-error-monad))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
