(library
 (name mineplex_client_base)
 (public_name mineplex-client-base)
 (libraries mineplex-base
            mineplex-shell-services
            mineplex-rpc)
 (modules (:standard bip39_english))
 (library_flags (:standard -linkall))
 (flags (:standard -open mineplex_base__TzPervasives
                   -open mineplex_rpc
                   -open mineplex_shell_services)))

(rule
 (targets bip39_english.ml)
 (deps    (:exe gen/bip39_generator.exe)
          gen/bip39_english.txt)
 (action  (run %{exe} %{targets})))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
