(library
 (name mineplex_client_base_unix)
 (public_name mineplex-client-base-unix)
 (libraries mineplex-base
            mineplex-client-base
            mineplex-client-commands
            mineplex-stdlib-unix
            mineplex-rpc-http-client-unix
            mineplex-mockup
            mineplex-mockup-registration
            mineplex-mockup-commands
            mineplex-signer-backends.unix
            mineplex-shell-services)
 (flags (:standard -open mineplex_base__TzPervasives
                   -open mineplex_rpc_http
                   -open mineplex_rpc_http_client_unix
                   -open mineplex_shell_services
                   -open mineplex_stdlib_unix
                   -open mineplex_client_base
                   -open mineplex_client_commands
                   -open mineplex_mockup_commands
                   -linkall)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
