opam-version: "2.0"
maintainer: "contact@mineplex.com"
authors: [ "mineplex devteam" ]
homepage: "https://www.mineplex.com/"
bug-reports: "https://gitlab.com/mineplex/mineplex/issues"
dev-repo: "git+https://gitlab.com/mineplex/mineplex.git"
license: "MIT"
depends: [
  "mineplex-tooling" { with-test }
  "dune" { >= "1.11" }
  "mineplex-base"
  "mineplex-client-base"
  "mineplex-stdlib-unix"
  "mineplex-rpc-http-client"
  "mineplex-signer-backends"
  "mineplex-client-commands"
  "mineplex-mockup-registration"
  "mineplex-mockup-commands"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "mineplex: common helpers for `mineplex-client` (unix-specific fragment)"
