(library
 (name mineplex_client_commands)
 (public_name mineplex-client-commands)
 (libraries mineplex-base
            mineplex-client-base
            mineplex-clic.unix
            mineplex-rpc
            mineplex-shell-services
            mineplex-p2p-services
            mineplex-stdlib-unix
            mineplex-signer-backends
            data-encoding)
 (library_flags (:standard -linkall))
 (flags (:standard -open mineplex_base__TzPervasives
                   -open mineplex_rpc
                   -open mineplex_clic_unix
                   -open mineplex_client_base
                   -open mineplex_shell_services
                   -open mineplex_p2p_services
                   -open Data_encoding)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
