(library
 (name mineplex_crypto)
 (public_name mineplex-crypto)
 (flags (:standard -open mineplex_stdlib
                   -open Data_encoding
                   -open mineplex_error_monad
                   -open mineplex_rpc))
 (libraries mineplex-stdlib
            data-encoding
            mineplex-error-monad
            mineplex-lwt-result-stdlib
            mineplex-rpc
            lwt
            hacl-star
            secp256k1-internal
            uecc
            ringo
            zarith))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
