opam-version: "2.0"
maintainer: "contact@mineplex.com"
authors: [ "mineplex devteam" ]
homepage: "https://www.mineplex.com/"
bug-reports: "https://gitlab.com/mineplex/mineplex/issues"
dev-repo: "git+https://gitlab.com/mineplex/mineplex.git"
license: "MIT"
depends: [
  "mineplex-tooling" { with-test }
  "dune" { >= "1.11" }
  "mineplex-stdlib"
  "data-encoding" { = "0.2" }
  "mineplex-error-monad"
  "mineplex-lwt-result-stdlib"
  "mineplex-rpc"
  "mineplex-clic"
  "lwt"
  "hacl-star"
  "zarith"
  "secp256k1-internal"
  "uecc"
  "conf-rust" # fake (for the CI) to be removed once libsapling is merged
  "ringo" { = "0.5" }
  "alcotest" { with-test & >= "1.1.0" }
]
conflicts: [
  "hacl_x25519"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "mineplex: library with all the cryptographic primitives used by mineplex"
