(library
 (name mineplex_error_monad)
 (public_name mineplex-error-monad)
 (flags (:standard -open mineplex_stdlib
                   -open Data_encoding
                   ))
 (libraries mineplex-stdlib
            data-encoding
            lwt-canceler
            lwt))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
