(library
 (name mineplex_event_logging)
 (public_name mineplex-event-logging)
 (flags (:standard -open mineplex_stdlib
                   -open Data_encoding
                   -open mineplex_error_monad
                   ))
 (libraries mineplex-stdlib
            data-encoding
            mineplex-error-monad
            lwt_log.core))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
