opam-version: "2.0"
version: "dev"
maintainer: "contact@mineplex.com"
authors: [ "mineplex devteam" ]
homepage: "https://www.mineplex.com/"
bug-reports: "https://gitlab.com/mineplex/mineplex/issues"
dev-repo: "git+https://gitlab.com/mineplex/mineplex.git"
license: "MIT"
depends: [
  "mineplex-tooling" { with-test }
  "dune" { >= "1.0.1" }
  "mineplex-stdlib"
  "data-encoding" { = "0.2" }
  "mineplex-error-monad"
  "lwt_log"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "mineplex event logging library"
