(library
 (name mineplex_lwt_result_stdlib)
 (public_name mineplex-lwt-result-stdlib)
 (flags (:standard -open mineplex_error_monad))
 (libraries mineplex-error-monad
            lwt
            mineplex-lwt-result-stdlib.sigs
            mineplex-lwt-result-stdlib.functors
            mineplex-lwt-result-stdlib.lib))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
