(library
 (name mineplex_micheline)
 (public_name mineplex-micheline)
 (libraries
  ;; External
  uutf
  zarith
  ;; Internal
  mineplex-stdlib
  mineplex-error-monad
  data-encoding
  )
 (flags (:standard -open mineplex_stdlib
                   -open mineplex_error_monad
                   -open Data_encoding)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
