opam-version: "2.0"
maintainer: "contact@mineplex.com"
authors: [ "mineplex devteam" ]
homepage: "https://www.mineplex.com/"
bug-reports: "https://gitlab.com/mineplex/mineplex/issues"
dev-repo: "git+https://gitlab.com/mineplex/mineplex.git"
license: "MIT"
depends: [
  "mineplex-tooling" { with-test }
  "dune" { >= "1.11" }
  "data-encoding" { = "0.2" }
  "mineplex-error-monad"
  "uutf"
  "alcotest-lwt" { with-test & >= "1.1.0" }
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "mineplex: internal AST and parser for the Michelson language"
