(library
 (name mineplex_mockup_registration)
 (public_name mineplex-mockup-registration)
 (modules registration mockup_args)
 (libraries
   mineplex-base
   mineplex-client-base
   mineplex-shell-services
   mineplex-protocol-environment)
 (flags (:standard -open mineplex_base__TzPervasives)))

(library
 (name mineplex_mockup)
 (public_name mineplex-mockup)
 (modules local_services RPC_client persistence)
 (libraries
   mineplex-base
   mineplex-client-base
   mineplex-rpc
   mineplex-p2p-services
   mineplex-p2p ; for registering the relevant RPCs
   mineplex-protocol-environment
   mineplex-stdlib-unix
   mineplex-rpc-http
   mineplex-mockup-registration)
 (flags (:standard
  -open mineplex_base__TzPervasives
  -open mineplex_mockup_registration)))

(library
 (name mineplex_mockup_commands)
 (public_name mineplex-mockup-commands)
 (modules mockup_wallet mockup_commands)
 (libraries
   mineplex-base
   mineplex-client-commands
   mineplex-client-base
   mineplex-mockup
   mineplex-mockup-registration)
 (flags (:standard
  -open mineplex_base__TzPervasives
  -open mineplex_mockup
  -open mineplex_mockup_registration)))

(alias
 (name runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:mineplex-tooling:lint.sh} %{deps})))
