opam-version: "2.0"
maintainer: "contact@mineplex.com"
authors: [ "mineplex devteam" ]
homepage: "https://www.mineplex.com/"
bug-reports: "https://gitlab.com/mineplex/mineplex/issues"
dev-repo: "git+https://gitlab.com/mineplex/mineplex.git"
license: "MIT"
depends: [
  "ocamlfind" { build }
  "dune" { >= "1.7" }
  "mineplex-stdlib-unix"
  "mineplex-base"
  "mineplex-client-base"
  "mineplex-rpc"
  "mineplex-p2p-services"
  "mineplex-p2p"
  "mineplex-protocol-environment"
  "mineplex-mockup-registration"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "mineplex: library of auto-documented RPCs (mockup mode)"
